--- a/tests/index.html
+++ b/tests/index.html
@@ -32,11 +32,13 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
 
+    <script>
+      window.ENV = {{ENV}};
+    </script>
     <script src="assets/qunit.js"></script>
     <script src="assets/app.js"></script>
     <script src="testem.js"></script>
     <script>
-      window.ENV = {{ENV}};
       require('codr/tests/test-helper');
       require('codr/tests/test-loader');
     </script>
