added home page

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <script src="assets/app.js"></script>
     <script>
       window.Codr = require('codr/app')['default'].create(ENV.APP);
+      window.Codr.ApplicationAdapter = DS.FixtureAdapter;
     </script>
   </body>
 </html>
