--- a/tests/index.html
+++ b/tests/index.html
@@ -9,7 +9,8 @@
 
     {{BASE_TAG}}
 
-    <link rel="stylesheet" href="assets/app.css">
+    <link rel="stylesheet" href="assets/vendor.css">
+    <link rel="stylesheet" href="assets/codr.css">
     <link rel="stylesheet" href="assets/qunit.css">
     <style>
       #ember-testing-container {
@@ -33,14 +34,17 @@
     <div id="qunit-fixture"></div>
 
     <script>
-      window.ENV = {{ENV}};
+      window.CodrENV = {{ENV}};
+      window.EmberENV = window.CodrENV.EmberENV;
     </script>
     <script src="assets/qunit.js"></script>
-    <script src="assets/app.js"></script>
+    <script src="assets/qunit-notifications.js"></script>
+    <script src="assets/vendor.js"></script>
+    <script src="assets/codr.js"></script>
     <script src="testem.js"></script>
     <script>
       require('codr/tests/test-helper');
-      require('codr/tests/test-loader');
     </script>
+    <script src="assets/test-loader.js"></script>
   </body>
 </html>
